test/corpus/if_statements.txt
==================
basic if statement
==================

sub init()
    if 5=5 then
        y=5
    end if
end sub
---

(source_file
  (sub_definition
    (identifier)
    (parameter_list)
    (block
      (if_statement
        (if_start)
        (binary_expression
          (comparison_expression
            (literal
              (number))
            (literal
              (number))))
        (if_then)
        (block
          (assignment_statement
            (identifier)
            (literal
              (number))))
        (end_if)))
    (end_sub)))

==================
complex if statement
==================

sub init()
    if 5=5 and 4+5 >= 10 then
        y=5
    end if
end sub
---

(source_file
  (sub_definition
    (identifier)
    (parameter_list)
    (block
      (if_statement
        (if_start)
        (binary_expression
          (logical_expression
            (binary_expression
              (comparison_expression
                (literal
                  (number))
                (literal
                  (number))))
            (binary_expression
              (comparison_expression
                (binary_expression
                  (arithmetic_expression
                    (additive_expression
                      (literal
                        (number))
                      (literal
                        (number)))))
                (literal
                  (number))))))
        (if_then)
        (block
          (assignment_statement
            (identifier)
            (literal
              (number))))
        (end_if)))
    (end_sub)))

==================
if statement with else clause
==================

sub init()
    if 5 = 6 then
        x = 10
    else
        x = 20
    end if
end sub

---

(source_file
  (sub_definition
    (identifier)
    (parameter_list)
    (block
      (if_statement
        (if_start)
        (binary_expression
          (comparison_expression
            (literal
              (number))
            (literal
              (number))))
        (if_then)
        (block
          (assignment_statement
            (identifier)
            (literal
              (number))))
        (else_clause
          (if_else)
          (block
            (assignment_statement
              (identifier)
              (literal
                (number)))))
        (end_if)))
    (end_sub)))

==================
if statement with else if clause
==================

sub init()
    if x > 10 then
        print "Greater than 10"
    else if x > 5 then
        print "Greater than 5"
    else
        print "Less than or equal to 5"
    end if
end sub

---

(source_file
  (sub_definition
    (identifier)
    (parameter_list)
    (block
      (if_statement
        (if_start)
        (binary_expression
          (comparison_expression
            (identifier)
            (literal
              (number))))
        (if_then)
        (block
          (print_statement
            (literal
              (string
                (string_contents)))))
        (else_if_clause
          (if_else_if)
          (binary_expression
            (comparison_expression
              (identifier)
              (literal
                (number))))
          (if_then)
          (block
            (print_statement
              (literal
                (string
                  (string_contents))))))
        (else_clause
          (if_else)
          (block
            (print_statement
              (literal
                (string
                  (string_contents))))))
        (end_if)))
    (end_sub)))

==================
if statement with nested if
==================

sub init()
    if x > 10 then
        if y > 5 then
            print "x > 10 and y > 5"
        else
            print "x > 10 and y <= 5"
        end if
    else
        print "x <= 10"
    end if
end sub

---

(source_file
  (sub_definition
    (identifier)
    (parameter_list)
    (block
      (if_statement
        (if_start)
        (binary_expression
          (comparison_expression
            (identifier)
            (literal
              (number))))
        (if_then)
        (block
          (if_statement
            (if_start)
            (binary_expression
              (comparison_expression
                (identifier)
                (literal
                  (number))))
            (if_then)
            (block
              (print_statement
                (literal
                  (string
                    (string_contents)))))
            (else_clause
              (if_else)
              (block
                (print_statement
                  (literal
                    (string
                      (string_contents))))))
            (end_if)))
        (else_clause
          (if_else)
          (block
            (print_statement
              (literal
                (string
                  (string_contents))))))
        (end_if)))
    (end_sub)))

===============
nested if statements mix between block and no block
===============

sub init()
    if true then
        if true then return true else return true
    else if false
        print("hi")
    else
        print("hi")
    end if
end sub
---

(source_file
  (sub_definition
    (identifier)
    (parameter_list)
    (block
      (if_statement
        (if_start)
        (literal
          (boolean))
        (if_then)
        (block
          (if_statement
            (if_start)
            (literal
              (boolean))
            (if_then)
            (return_statement
              (literal
                (boolean)))
            (if_else)
            (return_statement
              (literal
                (boolean)))))
        (else_if_clause
          (if_else_if)
          (literal
            (boolean))
          (block
            (print_statement
              (parenthesized_expression
                (literal
                  (string
                    (string_contents)))))))
        (else_clause
          (if_else)
          (block
            (print_statement
              (parenthesized_expression
                (literal
                  (string
                    (string_contents)))))))
        (end_if)))
    (end_sub)))

===================
single line if with multiple property access
===================
sub init()
    if m.sessiontoken <> "" then m.addheader()
end sub
---

(source_file
  (sub_definition
    (identifier)
    (parameter_list)
    (block
      (if_statement
        (if_start)
        (binary_expression
          (comparison_expression
            (property_access_expression
              (identifier)
              (identifier))
            (literal
              (string
                (string_contents)))))
        (if_then)
        (expression_statement
          (property_access_expression
            (identifier)
            (call_expression
              (identifier)
              (parenthesized_expression))))))
    (end_sub)))

===================
single line if simple
===================
sub init()
    if true then return true
end sub
---

(source_file
  (sub_definition
    (identifier)
    (parameter_list)
    (block
      (if_statement
        (if_start)
        (literal
          (boolean))
        (if_then)
        (return_statement
          (literal
            (boolean)))))
    (end_sub)))
