test/corpus/try_catch_statements.txt
==================
basic try-catch statement
==================

sub init()
  try
    x = 10 / 0
  catch ex
    print "Caught exception: " + ex.message
  end try
end sub

---

(source_file
  (sub_definition
    (identifier)
    (parameter_list)
    (block
      (try_statement
        (block
          (assignment_statement
            (identifier)
            (binary_expression
              (arithmetic_expression
                (multiplicative_expression
                  (literal
                    (number))
                  (literal
                    (number)))))))
        (catch_clause
          (identifier)
          (block
            (print_statement
              (binary_expression
                (arithmetic_expression
                  (additive_expression
                    (literal
                      (string
                        (string_contents)))
                    (property_access_expression
                      (identifier)
                      (identifier))))))))
        (end_try)))
    (end_sub)))
